Added openide and netbeans thirdparties for collectionnez

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
 
   <modules>
     <module>batik-all</module>
+    <module>org-netbeans-api-visual</module>
+    <module>org-openide-util</module>
+    <module>org-openide-util-lookup</module>
   </modules>
 
 </project>
