--- a/org-openide-util-lookup/pom.xml
+++ b/org-openide-util-lookup/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>org-openide-util-lookup</artifactId>
-  <version>8.3.1-SNAPSHOT</version>
+  <version>8.3.1</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
