--- a/org-openide-util/pom.xml
+++ b/org-openide-util/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>org-openide-util</artifactId>
-  <version>8.6.2-SNAPSHOT</version>
+  <version>8.6.2</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>org-openide-util-lookup</artifactId>
-      <version>8.3.1-SNAPSHOT</version>
+      <version>8.3.1</version>
     </dependency>
     <dependency>
       <groupId>xml-apis</groupId>
