--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <plugin>
           <groupId>org.codeartisans</groupId>
           <artifactId>thirdparties-maven-plugin</artifactId>
-          <version>1.1-SNAPSHOT</version>
+          <version>1.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
