--- a/org-netbeans-api-visual/pom.xml
+++ b/org-netbeans-api-visual/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>org-netbeans-api-visual</artifactId>
-  <version>2.23.1</version>
+  <version>2.23.1-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
