--- a/batik-all/pom.xml
+++ b/batik-all/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codeartisans.thirdparties.swing</groupId>
     <artifactId>thirdparty-swing-parent</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>batik-all</artifactId>
-  <version>1.8pre-r1084380</version>
+  <version>1.8pre-r1084380-r1-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
