--- a/org-netbeans-api-visual/pom.xml
+++ b/org-netbeans-api-visual/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codeartisans.thirdparties.swing</groupId>
     <artifactId>thirdparty-swing-parent</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>org-netbeans-api-visual</artifactId>
-  <version>2.32.1-r1-SNAPSHOT</version>
+  <version>2.23.1</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>org-openide-util</artifactId>
-      <version>8.6.3-r1-SNAPSHOT</version>
+      <version>8.6.2</version>
     </dependency>
     <dependency>
       <groupId>xml-apis</groupId>
