Revert "[maven-release-plugin] prepare release thirdparty-swing-1.0"
This reverts commit 9c46457ef66a8db9587ec7d3980308aa2bc17599.

--- a/batik-all/pom.xml
+++ b/batik-all/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codeartisans.thirdparties.swing</groupId>
     <artifactId>thirdparty-swing-parent</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>batik-all</artifactId>
-  <version>1.8pre-r1084380</version>
+  <version>1.8pre-r1084380-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
