--- a/org-netbeans-api-visual/pom.xml
+++ b/org-netbeans-api-visual/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codeartisans.thirdparties.swing</groupId>
     <artifactId>thirdparty-swing-parent</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>org-netbeans-api-visual</artifactId>
-  <version>2.23.1</version>
+  <version>2.23.1-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
