--- a/org-openide-util/pom.xml
+++ b/org-openide-util/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codeartisans.thirdparties.swing</groupId>
     <artifactId>thirdparty-swing-parent</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>org-openide-util</artifactId>
-  <version>8.6.2</version>
+  <version>8.6.2-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <packaging>jar</packaging>
