--- a/org-openide-util/pom.xml
+++ b/org-openide-util/pom.xml
@@ -40,17 +40,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>org-openide-util-lookup</artifactId>
-      <version>8.3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis</artifactId>
-      <version>1.3.04</version>
-    </dependency>
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis-ext</artifactId>
-      <version>1.3.04</version>
+      <version>8.3.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
